--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <header>
         <h1>Welcome to ASABE</h1>
+        <h2>University of Florida Chapter</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
