--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Welcome to ASABE</h1>
     <subheader></subheader
-        <h2>University of Florida Chapter</h2>
+        <h2>FL Student Branch/h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -24,7 +24,7 @@
         <p>Welcome to our club's website. Stay tuned for updates!</p>
     </section>
     <footer>
-        <p>Contact us: your.email@domain.com</p>
+        <p>Contact us: instagram- fsb_asabe</p>
     </footer>
 </body>
 </html>
