--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Welcome to ASABE</h1>
-    <subheader></subheader
+    <subheader>
         <h2>FL Student Branch</h2>
         <nav>
             <ul>
