--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Welcome to ASABE</h1>
     <subheader>
-        <h2>FL Student Branch</h2>
+        <h2>Florida Student Branch</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
