--- a/jobs.html
+++ b/jobs.html
@@ -17,24 +17,63 @@
             </ul>
         </nav>
     </header>
+
     <section>
         <h2>Available Positions</h2>
-        <ul>
-            <li>
-                <h3>Job Title 1</h3>
+
+        <!-- Filter Section -->
+        <label for="categoryFilter">Filter by Category:</label>
+        <select id="categoryFilter">
+            <option value="all">All</option>
+            <option value="engineering">Engineering</option>
+            <option value="marketing">Marketing</option>
+            <option value="design">Design</option>
+        </select>
+
+        <!-- Job Listings Section -->
+        <ul id="jobList">
+            <li data-category="engineering">
+                <h3>Engineering Job 1</h3>
                 <p>Description of the job and requirements.</p>
                 <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
             </li>
-            <li>
-                <h3>Job Title 2</h3>
+            <li data-category="marketing">
+                <h3>Marketing Job 1</h3>
+                <p>Description of the job and requirements.</p>
+                <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
+            </li>
+            <li data-category="design">
+                <h3>Design Job 1</h3>
+                <p>Description of the job and requirements.</p>
+                <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
+            </li>
+            <li data-category="engineering">
+                <h3>Engineering Job 2</h3>
                 <p>Description of the job and requirements.</p>
                 <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
             </li>
             <!-- Add more jobs here -->
         </ul>
     </section>
+
     <footer>
         <p>Contact us: your.email@domain.com</p>
     </footer>
+
+    <!-- JavaScript for filtering -->
+    <script>
+        document.getElementById('categoryFilter').addEventListener('change', function() {
+            let selectedCategory = this.value;
+            let jobListItems = document.querySelectorAll('#jobList li');
+
+            jobListItems.forEach(function(item) {
+                if (selectedCategory === 'all' || item.getAttribute('data-category') === selectedCategory) {
+                    item.style.display = 'list-item';
+                } else {
+                    item.style.display = 'none';
+                }
+            });
+        });
+    </script>
 </body>
 </html>
