--- a/jobs.html
+++ b/jobs.html
@@ -25,25 +25,25 @@
         <label for="categoryFilter">Filter by Category:</label>
         <select id="categoryFilter">
             <option value="all">All</option>
-            <option value="engineering">Engineering</option>
-            <option value="marketing">Marketing</option>
-            <option value="design">Design</option>
+            <option value="research">Research</option>
+            <option value="jobs">Jobs</option>
+            <option value="internships">Internships</option>
         </select>
 
         <!-- Job Listings Section -->
         <ul id="jobList">
-            <li data-category="engineering">
-                <h3>Engineering Job 1</h3>
+            <li data-category="research">
+                <h3>Research Positions 1</h3>
                 <p>Description of the job and requirements.</p>
                 <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
             </li>
-            <li data-category="marketing">
-                <h3>Marketing Job 1</h3>
+            <li data-category="jobs">
+                <h3>Job Positions 1</h3>
                 <p>Description of the job and requirements.</p>
                 <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
             </li>
-            <li data-category="design">
-                <h3>Design Job 1</h3>
+            <li data-category="internships">
+                <h3>Internship Positions 1</h3>
                 <p>Description of the job and requirements.</p>
                 <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
             </li>
