--- a/jobs.html
+++ b/jobs.html
@@ -33,22 +33,17 @@
         <!-- Job Listings Section -->
         <ul id="jobList">
             <li data-category="research">
-                <h3>Research Positions 1</h3>
+                <h3>Research Positions </h3>
                 <p>Description of the job and requirements.</p>
                 <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
             </li>
             <li data-category="jobs">
-                <h3>Job Positions 1</h3>
+                <h3>Job Positions </h3>
                 <p>Description of the job and requirements.</p>
                 <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
             </li>
             <li data-category="internships">
-                <h3>Internship Positions 1</h3>
-                <p>Description of the job and requirements.</p>
-                <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
-            </li>
-            <li data-category="engineering">
-                <h3>Engineering Job 2</h3>
+                <h3>Internship Positions </h3>
                 <p>Description of the job and requirements.</p>
                 <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
             </li>
