--- a/jobs.html
+++ b/jobs.html
@@ -52,7 +52,7 @@
     </section>
 
     <footer>
-        <p>Contact us: your.email@domain.com</p>
+        <p>Contact us @fsb_asabe on Instagram</p>
     </footer>
 
     <!-- JavaScript for filtering -->
