--- a/about.html
+++ b/about.html
@@ -40,8 +40,7 @@
     </section>
 
     <footer>
-        <p>Contact us: <a href="mailto:your.email@domain.com">your.email@domain.com</a></p>
-        <p>&copy; 2024 Your Club Name. All rights reserved.</p>
+        <p>&copy; 2024 UF ASABE. All rights reserved.</p>
     </footer>
 </body>
 </html>
