--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>Welcome to our club's website. Stay tuned for updates!</p>
     </section>
     <footer>
-        <p>Contact us @fsb_asabe on Instagram</p>
+        <p>; 2024 UF ASABE. All rights reserved.</p>
     </footer>
 </body>
 </html>
