--- a/jobs.html
+++ b/jobs.html
@@ -52,7 +52,7 @@
     </section>
 
     <footer>
-        <p>; 2024 UF ASABE. All rights reserved.</p>
+        <p>2024 UF ASABE. All rights reserved.</p>
     </footer>
 
     <!-- JavaScript for filtering -->
