--- a/jobs.html
+++ b/jobs.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>Job Listings</h1>
+    <subheader>
+        <h2>Florida Student Branch</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,7 +21,7 @@
     </header>
 
     <section>
-        <h2>Available Positions</h2>
+        <h3>Available Positions</h3>
 
         <!-- Filter Section -->
         <label for="categoryFilter">Filter by Category:</label>
@@ -33,17 +35,17 @@
         <!-- Job Listings Section -->
         <ul id="jobList">
             <li data-category="research">
-                <h3>Research Positions </h3>
+                <h4>Research Positions </h4>
                 <p>Description of the job and requirements.</p>
                 <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
             </li>
             <li data-category="jobs">
-                <h3>Job Positions </h3>
+                <h4>Job Positions </h4>
                 <p>Description of the job and requirements.</p>
                 <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
             </li>
             <li data-category="internships">
-                <h3>Internship Positions </h3>
+                <h4>Internship Positions </h4>
                 <p>Description of the job and requirements.</p>
                 <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
             </li>
