--- a/about.html
+++ b/about.html
@@ -9,6 +9,8 @@
 <body>
     <header>
         <h1>About Us</h1>
+    <subheader>
+        <h2>Florida Student Branch</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,13 +21,13 @@
     </header>
 
     <section>
-        <h2>Who We Are</h2>
+        <h3>Who We Are</h3>
         <p>We are a passionate group of individuals dedicated to connecting job seekers with employers in a variety of industries. Our goal is to create opportunities and foster a thriving community where people can find the perfect fit for their talents and skills.</p>
 
-        <h2>Our Mission</h2>
+        <h3>Our Mission</h3>
         <p>Our mission is to provide a platform that makes it easier for job seekers and employers to connect, providing opportunities in fields like engineering, marketing, and design.</p>
 
-        <h2>Follow Us on Social Media</h2>
+        <h3>Follow Us on Social Media</h3>
         <p>You can follow us on our social media platforms to stay updated:</p>
         <ul>
             <li><a href="https://www.facebook.com/yourclub" target="_blank">Facebook</a></li>
