--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UF ASABE</title>
+    <title>Job Listings</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to ASABE</h1>
-    <subheader>
-        <h2>Florida Student Branch</h2>
+        <h1>Job Listings</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,12 +17,16 @@
             </ul>
         </nav>
     </header>
+
     <section>
-        <h3>Latest News</h3>
-        <p>Welcome to our club's website. Stay tuned for updates!</p>
+        <h2>Available Positions</h2>
+        <p>Check out our latest job openings and apply today!</p>
+        <button>View Openings</button>
     </section>
+
     <footer>
-        <p>&copy;2024 UF ASABE. All rights reserved.</p>
+        <p>&copy; 2024 Your Club Name. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
