--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Job Listings</title>
+    <title>Your Club Name</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Job Listings</h1>
+        <h1>Welcome to Your Club</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -17,16 +17,14 @@
             </ul>
         </nav>
     </header>
-
     <section>
-        <h2>Available Positions</h2>
-        <p>Check out our latest job openings and apply today!</p>
-        <button>View Openings</button>
+        <h2>Latest News</h2>
+        <p>Welcome to our club's website. Stay tuned for updates!</p>
     </section>
-
     <footer>
-        <p>&copy; 2024 Your Club Name. All rights reserved.</p>
+        <p>Contact us: your.email@domain.com</p>
     </footer>
 </body>
 </html>
+
 
