--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to Your Club</h1>
+        <h1>American Society of Agricultural and Biological Engineers</h1>
+        <subheader>
+            <h2>Florida Student Branch</h2>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -18,7 +20,7 @@
         </nav>
     </header>
     <section>
-        <h2>Latest News</h2>
+        <h3>Latest News</h3>
         <p>Welcome to our club's website. Stay tuned for updates!</p>
     </section>
     <footer>
