--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
     <section>
         <h3>Who We Are</h3>
-        <p>We are a passionate group of individuals dedicated to connecting job seekers with employers in a variety of industries. Our goal is to create opportunities and foster a thriving community where people can find the perfect fit for their talents and skills.</p>
+        <p>The Florida Student Branch of the American Society of Agricultural and Biological Engineers (ASABE) is an educational and scientific organization focused on advancing engineering solutions for agricultural, food, and biological systems. Our members engage in a variety of activities, including socials, sports, and competitions. A highlight of our year is participating in the annual Fountain Wars event at the international ASABE convention, where students showcase their engineering skills in a fun and competitive environment.</p>
 
         <h3>Our Mission</h3>
         <p>Our mission is to provide a platform that makes it easier for job seekers and employers to connect, providing opportunities in fields like engineering, marketing, and design.</p>
