--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <p>The Florida Student Branch of the American Society of Agricultural and Biological Engineers (ASABE) is an educational and scientific organization focused on advancing engineering solutions for agricultural, food, and biological systems. Our members engage in a variety of activities, including socials, sports, and competitions. A highlight of our year is participating in the annual Fountain Wars event at the international ASABE convention, where students showcase their engineering skills in a fun and competitive environment.</p>
 
         <h3>Our Mission</h3>
-        <p>Our mission is to provide a platform that makes it easier for job seekers and employers to connect, providing opportunities in fields like engineering, marketing, and design.</p>
+        <p>ASABE is a global organization dedicated to advancing Agricultural and Biological Engineering through professional development, continuing education, and networking. At the University of Florida, our ASABE Student Branch provides members with opportunities for pre-professional growth, leadership development, and participation in engineering design competitions like Fountain Wars and the Quarter-Scale Tractor event. We also host fun social events and offer free food at all of our meetings!</p>
 
         <h3>Follow Us on Social Media</h3>
         <p>You can follow us on our social media platforms to stay updated:</p>
