--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <h3>Follow Us on Social Media</h3>
         <p>You can follow us on our social media platforms to stay updated:</p>
         <ul>
-            <li><a href="https://www.facebook.com/yourclub" target="_blank">Facebook</a></li>
+            <li><a href="https://www.facebook.com/groups/2202524457/" target="_blank">Facebook</a></li>
             <li><a href="https://www.instagram.com/yourclub" target="_blank">Instagram</a></li>
             <li><a href="https://www.twitter.com/yourclub" target="_blank">Twitter</a></li>
             <li><a href="https://www.linkedin.com/company/yourclub" target="_blank">LinkedIn</a></li>
