--- a/about.html
+++ b/about.html
@@ -31,14 +31,12 @@
         <p>You can follow us on our social media platforms to stay updated:</p>
         <ul>
             <li><a href="https://www.facebook.com/groups/2202524457/" target="_blank">Facebook</a></li>
-            <li><a href="https://www.instagram.com/yourclub" target="_blank">Instagram</a></li>
-            <li><a href="https://www.twitter.com/yourclub" target="_blank">Twitter</a></li>
-            <li><a href="https://www.linkedin.com/company/yourclub" target="_blank">LinkedIn</a></li>
-            <li><a href="https://www.youtube.com/channel/yourclub" target="_blank">YouTube</a></li>
+            <li><a href="https://www.instagram.com/fsb_asabe/" target="_blank">Instagram</a></li>
+          
         </ul>
 
         <h2>Visit Our Website</h2>
-        <p>To learn more about us, visit our official website at <a href="https://www.yourclubwebsite.com" target="_blank">www.yourclubwebsite.com</a>.</p>
+        <p>To learn more about us, visit our official website at <a href="https://abe.ufl.edu/undergraduate/student-organizations/asabe/" target="_blank">https://abe.ufl.edu/undergraduate/student-organizations/asabe/</a>.</p>
     </section>
 
     <footer>
