--- a/about.html
+++ b/about.html
@@ -33,9 +33,7 @@
             <li><a href="https://www.facebook.com/groups/2202524457/" target="_blank">Facebook</a></li>
             <li><a href="https://www.instagram.com/fsb_asabe/" target="_blank">Instagram</a></li>
         </ul>
-
-        <h2>Visit Our Website</h2>
-        <p>To learn more about us, visit our official website at <a href="https://abe.ufl.edu/undergraduate/student-organizations/asabe/" target="_blank">https://abe.ufl.edu/undergraduate/student-organizations/asabe/</a>.</p>
+            <li><a href="https://abe.ufl.edu/undergraduate/student-organizations/asabe/" target="_blank">Visit our official website</a>.</p>
     </section>
 
     <footer>
