--- a/about.html
+++ b/about.html
@@ -9,15 +9,16 @@
 <body>
     <header>
         <h1>About Us</h1>
-    <subheader>
-        <h2>Florida Student Branch</h2>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="jobs.html">Job Listings</a></li>
-                <li><a href="about.html">About Us</a></li>
-            </ul>
-        </nav>
+        <subheader>
+            <h2>Florida Student Branch</h2>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="jobs.html">Job Listings</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                </ul>
+            </nav>
+        </subheader>
     </header>
 
     <section>
@@ -41,3 +42,4 @@
     </footer>
 </body>
 </html>
+
