--- a/about.html
+++ b/about.html
@@ -36,6 +36,12 @@
         </ul>
     </section>
 
+    <!-- Link to Official Website -->
+    <section>
+        <h3>Visit Our Official Website</h3>
+        <p>To learn more, visit the official website of the Florida Student Branch of ASABE at <a href="https://abe.ufl.edu/undergraduate/student-organizations/asabe/" target="_blank">UF ASABE Website</a>.</p>
+    </section>
+
     <footer>
         <p>&copy;2024 UF ASABE. All rights reserved.</p>
     </footer>
