--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <section>
         <h3>Latest News</h3>
         <p>Welcome to our club's website. Stay tuned for updates!</p>
+     <footer>
+        <p>&copy;2024 UF ASABE. All rights reserved.</p>
+    </footer>
     </section>
 
 </body>
