--- a/jobs.html
+++ b/jobs.html
@@ -49,8 +49,10 @@
         <ul id="jobList">
             <li data-category="research" data-hours="0-10">
                 <h4>Research Position 1</h4>
-                <p>Position in a research lab involving data analysis and fieldwork. 0-10 hours per week.</p>
-                <p><a href="mailto:contact@yourclub.com">Apply Now</a></p>
+                <p>full-time Lab technician position in the Environmental Soil Chemistry Laboratory at the Soil, Water, and Ecosystem Sciences Department at the University of Florida on our main campus in Gainesville to be filled by an applicant with a BS or higher degree. The work consists of anything from weighing soil samples, making chemical reagents, preparing samples for various soil chemical analyses, maintaining clean laboratory areas and other general lab duties. Initial training will be provided, although prior lab experience and the ability to conduct preliminary data analyses will be an added advantage. Work hours: 40 hours a week.
+
+Salary:  From $17 to $22 per hour depending on experience.</p>
+                <p><a href="lilitvardanyan@ufl.edu ">Apply Now</a></p>
             </li>
             <li data-category="jobs" data-hours="10-20">
                 <h4>Engineering Job 1</h4>
