--- a/jobs.html
+++ b/jobs.html
@@ -50,7 +50,7 @@
         <ul id="jobList">
             <li data-category="research" data-hours="0-10">
                 <h4>Research Position 1</h4>
-                <p>Full-time Lab technician position in the Environmental Soil Chemistry Laboratory at the Soil, Water, and Ecosystem Sciences Department at the University of Florida on our main campus in Gainesville to be filled by an applicant with a BS or higher degree. The work consists of anything from weighing soil samples, making chemical reagents, preparing samples for various soil chemical analyses, maintaining clean laboratory areas and other general lab duties. Initial training will be provided, although prior lab experience and the ability to conduct preliminary data analyses will be an added advantage. Work hours: 40 hours a week.</p>
+                <p>Full-time Lab technician position in the Environmental Soil Chemistry Laboratory at the Soil, Water, and Ecosystem Sciences Department at the University of Florida on our main campus in Gainesville to be filled by an applicant with a BS or higher degree. The work consists of anything from weighing soil samples, making chemical reagents, preparing samples for various soil chemical analyses, maintaining clean laboratory areas and other general lab duties. Initial training will be provided, although prior lab experience and the ability to conduct preliminary data analyses will be an added advantage. Work hours: 40 hours a week (more than 20 hours).</p>
                 <p>Salary: From $17 to $22 per hour depending on experience.</p>
             </li>
             <li data-category="jobs" data-hours="10-20">
