--- a/jobs.html
+++ b/jobs.html
@@ -39,7 +39,7 @@
             <option value="all">All</option>
             <option value="0-10">0-10 hours/week</option>
             <option value="10-20">10-20 hours/week</option>
-            <option value="20-more">20 or more hours/week</option> <!-- New filter option added -->
+            <option value="20-more">20 or more hours/week</option>
         </select>
 
         <!-- Search by Keyword -->
@@ -48,9 +48,9 @@
 
         <!-- Job Listings Section -->
         <ul id="jobList">
-            <li data-category="research" data-hours="0-10">
+            <li data-category="research" data-hours="40">
                 <h4>Research Position 1</h4>
-                <p>Full-time Lab technician position in the Environmental Soil Chemistry Laboratory at the Soil, Water, and Ecosystem Sciences Department at the University of Florida on our main campus in Gainesville to be filled by an applicant with a BS or higher degree. The work consists of anything from weighing soil samples, making chemical reagents, preparing samples for various soil chemical analyses, maintaining clean laboratory areas and other general lab duties. Initial training will be provided, although prior lab experience and the ability to conduct preliminary data analyses will be an added advantage. Work hours: 20-more (around 40).</p>
+                <p>Full-time Lab technician position in the Environmental Soil Chemistry Laboratory at the Soil, Water, and Ecosystem Sciences Department at the University of Florida on our main campus in Gainesville to be filled by an applicant with a BS or higher degree. The work consists of anything from weighing soil samples, making chemical reagents, preparing samples for various soil chemical analyses, maintaining clean laboratory areas and other general lab duties. Initial training will be provided, although prior lab experience and the ability to conduct preliminary data analyses will be an added advantage. Work hours: 40 hours a week (more than 20 hours).</p>
                 <p>Salary: From $17 to $22 per hour depending on experience.</p>
             </li>
             <li data-category="jobs" data-hours="10-20">
@@ -61,7 +61,6 @@
                 <h4>Internship Position 1</h4>
                 <p>Summer internship with a focus on sustainability, 0-10 hours per week.</p>
             </li>
-            <!-- Add more jobs here -->
         </ul>
 
     <footer>
@@ -111,6 +110,7 @@
     </script>
 </body>
 </html>
+
 
 
 
