--- a/jobs.html
+++ b/jobs.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Job Listings</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Make sure styles.css is consistent -->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -63,54 +63,14 @@
                 <p>Summer internship with a focus on sustainability, 0-10 hours per week.</p>
             </li>
         </ul>
+    </section>
 
     <footer>
         <p>&copy;2024 UF ASABE. All rights reserved.</p>
     </footer>
-
-    <!-- JavaScript for filtering -->
-    <script>
-        // Filter by Category
-        document.getElementById('categoryFilter').addEventListener('change', filterJobs);
-        
-        // Filter by Hours Per Week
-        document.getElementById('hoursFilter').addEventListener('change', filterJobs);
-
-        // Search by Keyword
-        document.getElementById('searchInput').addEventListener('input', filterJobs);
-
-        // Filter function for jobs using a while loop
-        function filterJobs() {
-            let selectedCategory = document.getElementById('categoryFilter').value;
-            let selectedHours = document.getElementById('hoursFilter').value;
-            let searchTerm = document.getElementById('searchInput').value.toLowerCase();
-            let jobListItems = document.querySelectorAll('#jobList li');
-            
-            let i = 0; // Initialize counter for the while loop
-
-            // Loop through the job listings using a while loop
-            while (i < jobListItems.length) {
-                let item = jobListItems[i];
-                let categoryMatch = selectedCategory === 'all' || item.getAttribute('data-category') === selectedCategory;
-                let hoursMatch = selectedHours === 'all' || 
-                    (selectedHours === '0-10' && item.getAttribute('data-hours') === '0-10') || 
-                    (selectedHours === '10-20' && item.getAttribute('data-hours') === '10-20') || 
-                    (selectedHours === '20-more' && parseInt(item.getAttribute('data-hours')) >= 20); // Adjusted to match "20 or more" hours filter
-                let searchMatch = item.textContent.toLowerCase().includes(searchTerm);
-
-                // Display or hide the job based on the filters
-                if (categoryMatch && hoursMatch && searchMatch) {
-                    item.style.display = 'list-item';
-                } else {
-                    item.style.display = 'none';
-                }
-
-                i++; // Increment the counter
-            }
-        }
-    </script>
 </body>
 </html>
+
 
 
 
