--- a/jobs.html
+++ b/jobs.html
@@ -50,7 +50,8 @@
         <ul id="jobList">
             <li data-category="research" data-hours="40">
                 <h4>Research Position 1</h4>
-                <p>Full-time Lab technician position in the Environmental Soil Chemistry Laboratory at the Soil, Water, and Ecosystem Sciences Department at the University of Florida on our main campus in Gainesville. Work hours: 40 hours a week.</p>
+                <p>Full-time Lab technician position in the Environmental Soil Chemistry Laboratory at the Soil, Water, and Ecosystem Sciences Department at the University of Florida on our main campus in Gainesville. 
+                <p>Work hours: 40 hours a week.</p>
                 <p>Salary: From $17 to $22 per hour depending on experience.</p>
             </li>
             <li data-category="jobs" data-hours="10-20">
